<resources>
    <string name="app_name">Space!</string>
    <string name="home_play_button_text">Play</string>
    <string name="home_highscore_button_text">HighScore</string>

    <string name="highscore_header_text">HighScore</string>
    <string name="highscore_button_back">Back</string>
    <string name="gamescreen_score">Score: 0</string>


    <string name="retry_button_text">Retry</string>
    <string name="menu_button_text">Menu</string>
    <string name="game_over_text">Game Over</string>


</resources>