<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gamescreenbackground">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="120dp"
        android:layout_marginBottom="97dp"
        android:fontFamily="@font/permanent_marker"


        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorDarkRed"
        android:textSize="70dp"
        app:layout_constraintBottom_toTopOf="@+id/home_play_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/home_play_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"

        android:layout_marginBottom="30dp"
        android:background="@drawable/button_state_home"

        android:fontFamily="@font/quantico"
        android:text="@string/home_play_button_text"
        android:textSize="20dp"

        android:onClick="onclickPlayButton"

        app:layout_constraintBottom_toTopOf="@+id/home_highscore_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/home_highscore_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"

        android:onClick="onClickHighScoreButton"

        android:layout_marginBottom="263dp"
        android:background="@drawable/button_state_home"
        android:fontFamily="@font/quantico"

        android:text="@string/home_highscore_button_text"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_play_button" />


</androidx.constraintlayout.widget.ConstraintLayout>
